# BSDiff

./: .gitignore  README.md
Android/BSDiff/: .gitignore  settings.gradle
Android/BSDiff/app/: build.gradle
Android/BSDiff/app/libs/: bsdiff-release.aar
Android/BSDiff/app/src/androidTest/java/com/uniquext/bsdiff/: ExampleInstrumentedTest.java
Android/BSDiff/app/src/main/: AndroidManifest.xml
Android/BSDiff/app/src/main/cpp/: CMakeLists.txt  bsdiff.cpp
Android/BSDiff/app/src/main/cpp/bsdiff/: bsdiff.c  bsdiff.h  bspatch.c  bspatch.h
Android/BSDiff/app/src/main/cpp/core/: bsdiff.c
Android/BSDiff/app/src/main/java/com/uniquext/bsdiff/: BSDiff.java  MainActivity.java
Android/BSDiff/app/src/main/res/layout/: activity_main.xml
Android/BSDiff/app/src/main/res/values/: strings.xml  themes.xml
Android/BSDiff/app/src/main/res/values-night/: themes.xml
Android/BSDiff/app/src/test/java/com/uniquext/bsdiff/: ExampleUnitTest.java
Android/BSDiff/bsdiff/: build.gradle
Android/BSDiff/bsdiff/src/main/: AndroidManifest.xml
Android/BSDiff/bsdiff/src/main/cpp/: CMakeLists.txt  bsdiff.cpp
Android/BSDiff/bsdiff/src/main/cpp/core/: bspatch.c
Android/BSDiff/bsdiff/src/main/java/com/uniquext/bsdiff/: BSDiff.java
Android/BSDiff/gradle/wrapper/: gradle-wrapper.properties
C/BSDiff/: CMakeLists.txt
C/BSDiff/core/: bsdiff.c  bspatch.c
Java/BSDiff/: pom.xml
Java/BSDiff/src/main/java/org/example/: App.java  BSDiff.java
